white space issue

--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
+
+
 footer {
   padding: 35px ;
-  margin-bottom: 0;
+  margin-bottom: auto;
   background-color: var(--background);
   text-align: center;
   
